fix uneven height on chained dialogs

--- a/webook/static/css/base.css
+++ b/webook/static/css/base.css
@@ -449,6 +449,7 @@ html, body {
 
 
 .slave-dialog {
+    top: 0px!important; /* To offset for a weird issue where chained dialogs are top+ something */
     box-shadow: 10px 1px 20px 1px  grey!important;
     background-color: var(--SECONDARY-COLOR)!important;
     border-left: none!important;
